--- a/resources/templates/launch_script.in
+++ b/resources/templates/launch_script.in
@@ -16,7 +16,7 @@
 
 filename=$0
 script_dir=`cd "\`dirname "$filename"\`"; pwd`
-executable_name=@LAUNCH_EXECUTABLE_NAME@
+executable_name=@LAUNCH_EXECUTABLE_NAME@app
 script_version=@RTICONNEXTDDS_VERSION@
 
 rticommon_script_dir=$script_dir/../resource/scripts
