--- a/examples/tutorials/CMakeLists.txt
+++ b/examples/tutorials/CMakeLists.txt
@@ -9,7 +9,23 @@ target_link_libraries(tutorial-opc-ua-server
     open62541::open62541
 )
 set_target_properties(tutorial-opc-ua-server PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY "bin"
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
+)
+foreach (output_config ${CMAKE_CONFIGURATION_TYPES})
+    string(TOUPPER ${output_config} output_config)
+    set_target_properties(tutorial-opc-ua-server PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY_${output_config} "${CMAKE_CURRENT_BINARY_DIR}/bin"
+    )
+endforeach()
+
+install(TARGETS tutorial-opc-ua-server
+    RUNTIME DESTINATION resource/app/bin/${CONNEXTDDS_ARCH}
+)
+
+set(LAUNCH_EXECUTABLE_NAME "tutorial-opc-ua-server")
+configure_file(
+    "${CMAKE_SOURCE_DIR}/resources/templates/launch_script${RTIGATEWAY_SCRIPT_EXTENSION}.in"
+    "${CMAKE_BINARY_DIR}/scripts/${LAUNCH_EXECUTABLE_NAME}${RTIGATEWAY_SCRIPT_EXTENSION}"
 )
 
 # DDS Demo Publisher
@@ -23,7 +39,24 @@ target_link_libraries(tutorial-dds-publisher
 )
 set_target_properties(tutorial-dds-publisher
     PROPERTIES
-        RUNTIME_OUTPUT_DIRECTORY "bin"
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
+
+)
+foreach (output_config ${CMAKE_CONFIGURATION_TYPES})
+    string(TOUPPER ${output_config} output_config)
+    set_target_properties(tutorial-dds-publisher PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY_${output_config} "${CMAKE_CURRENT_BINARY_DIR}/bin"
+    )
+endforeach()
+
+install(TARGETS tutorial-dds-publisher
+    RUNTIME DESTINATION resource/app/bin/${CONNEXTDDS_ARCH}
+)
+
+set(LAUNCH_EXECUTABLE_NAME "tutorial-dds-publisher")
+configure_file(
+    "${CMAKE_SOURCE_DIR}/resources/templates/launch_script${RTIGATEWAY_SCRIPT_EXTENSION}.in"
+    "${CMAKE_BINARY_DIR}/scripts/${LAUNCH_EXECUTABLE_NAME}${RTIGATEWAY_SCRIPT_EXTENSION}"
 )
 
 # DDS Demo Requester
@@ -53,6 +86,21 @@ target_link_libraries(tutorial-dds-requester
     rtiddsopcuagateway-lib
 )
 set_target_properties(tutorial-dds-requester PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY "bin"
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
+)
+foreach (output_config ${CMAKE_CONFIGURATION_TYPES})
+    string(TOUPPER ${output_config} output_config)
+    set_target_properties(tutorial-dds-requester PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY_${output_config} "${CMAKE_CURRENT_BINARY_DIR}/bin"
+    )
+endforeach()
+
+install(TARGETS tutorial-dds-requester
+    RUNTIME DESTINATION resource/app/bin/${CONNEXTDDS_ARCH}
 )
 
+set(LAUNCH_EXECUTABLE_NAME "tutorial-dds-requester")
+configure_file(
+    "${CMAKE_SOURCE_DIR}/resources/templates/launch_script${RTIGATEWAY_SCRIPT_EXTENSION}.in"
+    "${CMAKE_BINARY_DIR}/scripts/${LAUNCH_EXECUTABLE_NAME}${RTIGATEWAY_SCRIPT_EXTENSION}"
+)
