Revert "Executable name in launch_script.bat.in not correct"

--- a/resources/templates/launch_script.bat.in
+++ b/resources/templates/launch_script.bat.in
@@ -17,7 +17,7 @@
 setlocal EnableDelayedExpansion
 
 set appName=${LAUNCH_EXECUTABLE_NAME}
-set executableName=${LAUNCH_EXECUTABLE_NAME}.exe
+set executableName=${LAUNCH_EXECUTABLE_NAME}app.exe
 set scriptVersion=${CONNEXTDDS_VERSION}
 
 set dir=%~dp0
